--- a/index.html
+++ b/index.html
@@ -180,6 +180,12 @@
                 </div>
                 <div class="name-pro">Pixeo Prime II</div>
               </div>
+              <div class="product">
+                <div class="image-pro">
+                  <img src="src/shoe_1.png" alt="" />
+                </div>
+                <div class="name-pro">Pixeo Prime IV</div>
+              </div>
             </div>
             <div class="products-md ">
               <div class="product">
