--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         onmouseout="normalMode()"
       >
         <div class="search-input">
+          
           <svg
             xmlns="http://www.w3.org/2000/svg"
             width="30"
@@ -34,6 +35,8 @@
             <path d="M0 0h24v24H0z" fill="none" />
           </svg>
           <input type="text" name="" id="" />
+          <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 24 24"><path fill='white' d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"/><path d="M0 0h24v24H0z" fill="none"/></svg>
+
         </div>
         <ul id="list">
           <li><a href="#">Inicio</a></li>
